[gd_scene load_steps=5 format=3 uid="uid://multiball001"]

[ext_resource type="Script" path="res://scripts/MultiballIndicator.gd" id="1_script"]
[ext_resource type="Texture2D" path="res://assets/sprites/multiball/dimmed.png" id="2_dimmed"]
[ext_resource type="Texture2D" path="res://assets/sprites/multiball/lit.png" id="3_lit"]

[node name="MultiballIndicator" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 50.0
offset_right = 180.0
offset_bottom = 90.0
grow_horizontal = 0
script = ExtResource("1_script")

[node name="Indicator1" type="Sprite2D" parent="."]
position = Vector2(20, 20)
texture = ExtResource("2_dimmed")
scale = Vector2(0.5, 0.5)

[node name="Indicator2" type="Sprite2D" parent="."]
position = Vector2(60, 20)
texture = ExtResource("2_dimmed")
scale = Vector2(0.5, 0.5)

[node name="Indicator3" type="Sprite2D" parent="."]
position = Vector2(100, 20)
texture = ExtResource("2_dimmed")
scale = Vector2(0.5, 0.5)

[node name="Indicator4" type="Sprite2D" parent="."]
position = Vector2(140, 20)
texture = ExtResource("2_dimmed")
scale = Vector2(0.5, 0.5)
